# examplenv

./: .env.dev  .env.prod  .env.test  README.md  example.env  example.env.dev  example.env.prod  example.env.test  pyproject.toml  ruff.toml
src/examplenv/: __init__.py  cli.py
