[project]
name = "examplenv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thng292", email = "62800118+thng292@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "typer>=0.20.0",
]

[project.scripts]
examplenv = "examplenv.cli:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.pyrefly]
project-includes = ["src"]
project-excludes = ["**/.[!/.]*", "**/tests", "**/__pycache__"]
search-path = ["."]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
examplenv = { workspace = true }

[dependency-groups]
dev = [
    "examplenv",
    "pyrefly>=0.43.1",
    "ruff>=0.14.6",
]
